# cq-viewer

./: .gitignore  pyproject.toml  readme.md  requirements-dev.txt  requirements.in  requirements.txt
src/cq_viewer/: __init__.py  ais.py  app.py  conf.py  cq.py  interface.py  managers.py  measurement.py  str_enum.py  util.py  wx_components.py
tests/: test_b123d.py
